[package]
name = "cuda_raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
raytrace_lib = { path = "../raytrace_lib"}
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"