[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
env_logger = "0.11.1"
raytrace_lib = { path="../raytrace_lib" }
cuda_raytrace_lib = { path="../cuda_raytrace_lib" }
sdl2 = "0.37.0"